<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register_Page">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/white">


        <View
            android:id="@+id/top_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            />


        <TextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="30sp"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:padding="1dp"
            android:text="@string/sign_up"
            android:textColor="#AA7712"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView_register_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/top_view"
            android:layout_marginTop="50dp"
            android:textStyle="bold"
            android:padding="6dp"
            android:text="@string/full_name"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:textSize="16sp" />


        <EditText

            android:id="@+id/editText_register_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_register_fullname"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:background="@drawable/border"
            android:padding="6dp"
            android:textSize="16sp" />


        <!--        for UserName -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_username"
            android:layout_below="@+id/editText_register_full_name"
            android:text="@string/username"
            android:textStyle="bold"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_username"
            android:layout_below="@+id/textView_register_username"
            android:hint="@string/enter_a_username"
            android:background="@drawable/border"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:textSize="16sp" />





        <!--        for Email-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_email"
            android:layout_below="@+id/editText_register_username"
            android:text="@string/e_mail"
            android:textStyle="bold"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_email"
            android:layout_below="@+id/textView_register_email"
            android:hint="@string/enter_your_e_mail"
            android:inputType="textEmailAddress"
            android:padding="6dp"
            android:background="@drawable/border"
            android:textSize="16sp" />


        <!--date of birth -->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_dob"
            android:layout_below="@+id/editText_register_email"
            android:text="@string/date_of_birth_dd_mm_yyyy"
            android:textColor="#555555"
            android:padding="6dp"
            android:textSize="16sp"
            android:textStyle="bold"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_dob"
            android:hint="@string/enter_your_date_of_birth_dd_mm_yyyy"
            android:inputType="date"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_below="@+id/textView_register_dob"
            android:background="@drawable/border"/>


        <!--     Gender   -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_gender"
            android:layout_below="@+id/editText_register_dob"
            android:text="@string/gender"
            android:textColor="#555555"
            android:textStyle="bold"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/textView_register_gender"
            android:id="@+id/radio_group_register_gender">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_female"
                android:text="@string/female"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#555555"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/radio_male"
                android:text="@string/male"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#555555"/>


        </RadioGroup>

        <!--      Phone Number  -->


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_mobile"
            android:layout_below="@+id/radio_group_register_gender"
            android:text="@string/phone"
            android:textColor="#555555"
            android:padding="6dp"
            android:textStyle="bold"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_mobile"
            android:hint="@string/enter_your_phone_number_without_880"
            android:inputType="phone"
            android:padding="6dp"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:layout_below="@+id/textView_register_mobile" />

        <!--        Password-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_password"
            android:layout_below="@+id/editText_register_mobile"
            android:text="@string/password"
            android:textStyle="bold"
            android:textColor="#555555"
            android:background="@drawable/border"
            android:padding="6dp"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_password"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:layout_below="@+id/textView_register_password" />

        <!--        Confirm Password-->

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_register_confirm_password"
            android:layout_below="@+id/editText_register_password"
            android:text="@string/confirm_password"
            android:textColor="#555555"
            android:textStyle="bold"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText_register_confirm_password"
            android:hint="@string/re_enter_your_password"
            android:inputType="textPassword"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:layout_below="@+id/textView_register_confirm_password"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_BD_states"
            android:layout_below="@+id/editText_register_confirm_password"
            android:text="@string/division"
            android:textColor="#555555"
            android:textStyle="bold"
            android:padding="6dp"
            android:textSize="16sp"
            android:background="@drawable/border"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_BD_states"
            android:id="@+id/spinner_indian_states"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView_BD_districts"
            android:layout_below="@+id/spinner_indian_states"
            android:text="@string/district"
            android:textColor="#555555"
            android:textStyle="bold"
            android:padding="6dp"
            android:background="@drawable/border"
            android:textSize="16sp"
            android:layout_marginTop="10dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_BD_districts"
            android:id="@+id/spinner_BD_districts"
            />




        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="70dp"
            android:id="@+id/button_register"
            android:layout_below="@id/spinner_BD_districts"
            android:layout_marginTop="30dp"
            android:text="@string/Register"/>

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbBar"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:elevation="10dp"
            android:visibility="gone"/>

    </RelativeLayout>

</ScrollView>